--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
 	<packageInformation>
 		<packageName>Web ControlPanel Nginx Modul</packageName>
 		<packageDescription>Erstellt/Editiert Nginx-Vhosts</packageDescription>
-		<version>1.0.0 Beta1</version>
+		<version>1.0.0 RC2</version>
 		<plugin>com.toby.cp</plugin>
 		<date>2010-10-24</date>
 	</packageInformation>
